--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@babel/polyfill": "7.4.3",
     "@material-ui/core": "^4.2.1",
     "add": "^2.0.6",
+    "axios": "^0.19.0",
     "chalk": "2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
