--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "@babel/polyfill": "7.4.3",
     "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
     "add": "^2.0.6",
     "axios": "^0.19.0",
     "chalk": "2.4.2",
